class XMLService {
    getXML() {
        return "<user><name>Hiền</name></user>";
    }
}

module.exports = XMLService;